--- a/Test_Jen/pom.xml
+++ b/Test_Jen/pom.xml
@@ -4,6 +4,10 @@
   <artifactId>SampleMaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
   <dependencies>
 <dependency>
